Fix sidebar sticky/overflow behavior

--- a/great_expectations/render/view/styles/data_docs_default_styles.css
+++ b/great_expectations/render/view/styles/data_docs_default_styles.css
@@ -9,7 +9,6 @@ body {
 .sticky {
   position: -webkit-sticky;
   position: sticky;
-  max-height: 90vh;
   top: 80px;
   z-index: 1;
 }
